# cli_game_oop

./: .gitignore  DnD.db  README.md  alembic.ini  pyproject.toml  run.py
DnD/: __init__.py
DnD/controller/: bases.py  board_elements.py  game_board.py  mechanics.py  user.py
DnD/model/: __init__.py
DnD/view/: view.py
config/: logging.toml
database/: __init__.py  core.py
database/migrations/: env.py
database/migrations/versions/: 555f5ba528c8_added_users_table.py
database/models/: user.py
kernel/: __init__.py  application.py
logs/: logs_doc.md
painless/: __init__.py
painless/helper/: exceptions.py  messages.py  settings.py  validators.py
painless/utils/: funcs.py
